--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 langage: python
 
+sudo: false
+
 python:
     - "2.7"
 
-before-install:
-    - travis_retry pip install numpy
-    - travis_retry pip install scipy
-    - travis_retry pip install nose
+install:
+    - pip install nose
+    - pip install numpy
+    - pip install scipy
 
 script: nosetests
