--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,35 @@
-langage: python
+language: python
 
 sudo: false
 
 python:
     - "2.7"
 
+before_install:
+  # see http://conda.pydata.org/docs/travis.html
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose numpy scipy matplotlib
+  - source activate test-environment
+
+env:
+    global:
+        - CONDA="$HOME/miniconda/bin"
+        - PATH="$CONDA:$PATH"
+
 install:
-    - pip install nose
-    - pip install numpy
-    - pip install scipy
+  - python setup.py install
 
 script: nosetests
