--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: python
 
 sudo: false
 
-python:
-    - "2.7"
-
 before_install:
   # see http://conda.pydata.org/docs/travis.html
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
@@ -21,15 +18,21 @@ before_install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose numpy scipy matplotlib
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose numpy scipy matplotlib pep8 pyflakes
   - source activate test-environment
 
 env:
-    global:
-        - CONDA="$HOME/miniconda/bin"
-        - PATH="$CONDA:$PATH"
+  global:
+    - CONDA="$HOME/miniconda/bin"
+    - PATH="$CONDA:$PATH"
+  matrix:
+    - PEP=true
+    - PEP=false
 
 install:
   - python setup.py install
 
-script: nosetests
+script:
+    - if $PEP; then pep8 wavelets; fi
+    - if $PEP; then pyflakes wavelets; fi
+    - if ! $PEP; then nosetests; fi
