travis: test python 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 
 sudo: false
 
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+
 before_install:
   # need this for GUI
   - "export DISPLAY=:99.0"
