--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,12 @@ env:
     - CONDA="$HOME/miniconda/bin"
     - PATH="$CONDA:$PATH"
   matrix:
-    - PEP=true
     - PEP=false
+
+matrix:
+  include:
+    - python: 2.7
+      env: PEP=true
 
 install:
   - python setup.py install
